apps/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-frontend
  namespace: zt-web
  labels:
    app: blog-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-frontend
  template:
    metadata:
      labels:
        app: blog-frontend
    spec:
      serviceAccountName: blog-frontend
      containers:
        - name: blog-frontend
          image: devesh11411/blog-web:v1.0.0
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
