apps/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-frontend
  namespace: zt-web
  labels:
    app: blog-frontend
spec:
  selector:
    app: blog-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
